# gbrust

./: .gitignore  Cargo.toml  README.md  \
src/: .main.rs.swp  cart.rs  dmg_cpu.rs  main.rs
src/dmg/: .cart.rs.swp  .dmg_cpu.rs.swp  .interconnect.rs.swp  .ppu.rs.swp  cart.rs  console.rs  cpu_test.rs  dmg_cpu.rs  gamepad.rs  interconnect.rs  mod.rs  ppu.rs  timer.rs
src/dmg/mbc/: .mbc1.rs.swp  .mbc2.rs.swp  .mbc_properties.rs.swp  .rom_only.rs.swp  mbc1.rs  mbc2.rs  mbc3.rs  mbc_properties.rs  mod.rs  rom_only.rs
testcase/memory address test/: All0000FFFF.java  interconn_memtest.rs
