[package]
name = "gbrust"
version = "0.1.0"
authors = ["mgiang2015 <mgiang2015@gmail.com>", "theodoreleebrant <theodoreleebrant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.16.0"
bitflags = "1.2.1"